.airflow/logs/dag_id=data_extraction_to_snowflake/run_id=scheduled__2025-07-13T00:00:00+00:00/task_id=processing_tables/map_index=3/attempt=1.log
[2025-07-14T22:59:18.134+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: data_extraction_to_snowflake.processing_tables scheduled__2025-07-13T00:00:00+00:00 map_index=3 [queued]>
[2025-07-14T22:59:18.140+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: data_extraction_to_snowflake.processing_tables scheduled__2025-07-13T00:00:00+00:00 map_index=3 [queued]>
[2025-07-14T22:59:18.141+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-07-14T22:59:18.150+0000] {taskinstance.py:2191} INFO - Executing <Mapped(_PythonDecoratedOperator): processing_tables> on 2025-07-13 00:00:00+00:00
[2025-07-14T22:59:18.154+0000] {standard_task_runner.py:60} INFO - Started process 99 to run task
[2025-07-14T22:59:18.156+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'data_extraction_to_snowflake', 'processing_tables', 'scheduled__2025-07-13T00:00:00+00:00', '--job-id', '77', '--raw', '--subdir', 'DAGS_FOLDER/etl_transfer_to_stage.py', '--cfg-path', '/tmp/tmpfif58bl1', '--map-index', '3']
[2025-07-14T22:59:18.158+0000] {standard_task_runner.py:88} INFO - Job 77: Subtask processing_tables
[2025-07-14T22:59:18.201+0000] {task_command.py:423} INFO - Running <TaskInstance: data_extraction_to_snowflake.processing_tables scheduled__2025-07-13T00:00:00+00:00 map_index=3 [running]> on host ba480c39b9ec
[2025-07-14T22:59:18.264+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='data_extraction_to_snowflake' AIRFLOW_CTX_TASK_ID='processing_tables' AIRFLOW_CTX_EXECUTION_DATE='2025-07-13T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-07-13T00:00:00+00:00'
[2025-07-14T22:59:18.274+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T22:59:18.291+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T22:59:18.316+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T22:59:18.325+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 241, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_transfer_to_stage.py", line 103, in processing_each_table
    cursor.execute(insert_query,row)
psycopg2.errors.SyntaxError: syntax error at or near "id"
LINE 1: ...NSERT INTO "DW_HR_NIVES".termination_reasons_info id, termin...
                                                             ^

[2025-07-14T22:59:18.331+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=data_extraction_to_snowflake, task_id=processing_tables, map_index=3, execution_date=20250713T000000, start_date=20250714T225918, end_date=20250714T225918
[2025-07-14T22:59:18.337+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 77 for task processing_tables (syntax error at or near "id"
LINE 1: ...NSERT INTO "DW_HR_NIVES".termination_reasons_info id, termin...
                                                             ^
; 99)
[2025-07-14T22:59:18.380+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-14T22:59:18.389+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
